--- a/rrLauncher/apps/html/app1/large.html
+++ b/rrLauncher/apps/html/app1/large.html
@@ -24,12 +24,13 @@
 		</div>
 		<div id="sub-column1">
 			<h1>There are many variations of</h1>
-			<h2>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at </h2>
+			<h2>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin  </h2>
+			<h5>There are many variations of</h5>
 		</div>
 	</div>
 	<div id="right-side">
 		<h3>There are many variations of</h3>
-		<h4>Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</h4>
+		<h4>literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</h4>
 	</div>
 	<div id="footer">
 		<div id="sub-footer">
