html : update html styles

--- a/rrLauncher/apps/html/service_small.html
+++ b/rrLauncher/apps/html/service_small.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="Web page layout template using XHTML and CSS that conforms to W3C Accessibility and Usability guidelines. Downloadable as a ZIP file and free to use." />
 	<meta name="keywords" content="css, xhtml, layout, w3c, usability, accessibility, download" />
 	<meta name="author" content="Richard Marsh" />
-	<link rel="stylesheet" type="text/css" href="style/service/small.css" media="screen, projection" />
+	<link rel="stylesheet" type="text/css" href="style/info/small.css" media="screen, projection" />
 	<title>CSS Layout 4 - Header, right menu column and content with sub-heading and two columns</title>
 </head>
 <body>
