--- a/rrLauncher/apps/html/jeu_large.html
+++ b/rrLauncher/apps/html/jeu_large.html
@@ -1,26 +1,25 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" 
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"> 
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"> 
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="description" content="Web page layout template using XHTML and CSS that conforms to W3C Accessibility and Usability guidelines. Downloadable as a ZIP file and free to use." />
 	<meta name="keywords" content="css, xhtml, layout, w3c, usability, accessibility, download" />
 	<meta name="author" content="Richard Marsh" />
-	<link rel="stylesheet" type="text/css" href="style/jeu/large.css" media="screen, projection" />
+	<link rel="stylesheet" type="text/css" href="style/info/large.css" media="screen, projection" />
 	<title>CSS Layout 4 - Header, right menu column and content with sub-heading and two columns</title>
 </head>
 <body>
 <div id="wrap">
 	<div id="page-header">
 		<div id="sub-header">
-			<h0>Réalisé par Lapoic</h0>
+			<h6>Realise par Lapoic</h6>
 		</div>
 	</div>
 	<div id="left-side">
 		<div id="sub-heading">
 		</div>
 		<div id="sub-column2">
-			<IMG SRC="images.jpeg" ALT="some text" WIDTH=100% HEIGHT=100%>
+			<img src="images.jpeg" alt="lapin" width = "100%" height="100%"></img>
 		</div>
 		<div id="sub-column1">
 			<h1>There are many variations of</h1>
@@ -34,7 +33,7 @@
 	</div>
 	<div id="footer">
 		<div id="sub-footer">
-			<h0>Donnez votre avis</h0>
+			<h6>Donnez votre avis</h6>
 		</div>
 	</div>
 </div>
